--- a/float-grid.css
+++ b/float-grid.css
@@ -18,7 +18,7 @@
   max-width: 1000px;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   display: inline-block;
 }
 
