--- a/float-grid.css
+++ b/float-grid.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
 }
 
+* {
+  box-sizing: border-box;
+}
 
 .row {
   max-width: 1000px;
@@ -10,6 +13,7 @@
   margin: 0 auto;
 }
 
+/* Clearfix */
 .row::before,
 .row::after {
   display: table;
@@ -22,9 +26,9 @@
 
 .col-3, .col-4, .col-6, .col-12 {
   float: left;
+
   padding-left: 1.04166666%;
   padding-right: 1.04166666%;
-  border:1px solid grey;
 }
 
 /* Mobile defaults */
@@ -33,7 +37,6 @@
 }
 
 
-/* Non-mobile, grid */
 @media only screen and (min-width: 640px) {
   .col-3 {
     width: 25%;
